Fixed Margin Gap

--- a/src/pages/ProductDetail/ProductDetail.scss
+++ b/src/pages/ProductDetail/ProductDetail.scss
@@ -44,3 +44,8 @@ tr.detail-row>td {
 .image-gallery-image {
     border-radius: 16px !important;
 }
+
+.row-detail {
+    margin-right: 0px;
+    margin-left: 0px;
+}
